[FE,BE,DOC] Show All Inventory
