# myride/app/Http/Controllers/InventoryController.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use Illuminate\Http\Request;
+
+// Helpers
+use App\Helpers\Generator;
+
+class InventoryController extends Controller
+{
+    /**
+     * Display a listing of the resource.
+     */
+    public function index()
+    {
+        $user_id = Generator::getUserId(session()->get('role_key'));
+
+        if($user_id != null){
+            return view('inventory.index')
+                ->with('active_menu','inventory');
+        } else {
+            return redirect("/login");
+        }
+    }
+}
